@@ -13,7 +13,12 @@ class TestClient(unittest.TestCase):
 
     def test_get_video_streams(self):
         client = Client()
+
+        streams = client.get_streams('AP-1HCAY4RND2111', bandwidth=2)
         streams = client.get_streams('AP-1H6ZJT8EH1W11', bandwidth=2)
+
+        # live (replay)
+        streams = client.get_streams('event-stream-507', bandwidth=2)
         pass
 
     pass
